<resources>
    <string name="app_name">StoryApp</string>
    <string name="signup">Daftar</string>
    <string name="login">Masuk</string>
    <string name="message_welcome_page">Mau belajar Android, iOS, Machine Learning, Cloud, Front-End, Back-End, dan bidang IT lainnya? Di Dicoding aja!</string>
    <string name="title_welcome_page">Masuk ke Dunia Ceritamu</string>
    <string name="title_signup_page">Mulai Ceritamu Sekarang"</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Temukan kisah-kisah seru dan buat cerita baru
</string>
    <string name="title_login_page">Sudah siap untuk upgrade skill?</string>
    <string name="name">Nama</string>
    <string name="message_main_page">Selamat Belajar di Dicoding.</string>
    <string name="greeting">Halo %1$s,</string>
    <string name="logout">Keluar</string>
    <string name="register">belum punya akun? klik untuk daftar</string>
    <string name="add_story">add story</string>
    <string name="description">Cerita apa yang ingin kamu bagikan...</string>
    <string name="list_item_photo">list item photo</string>
    <string name="story_image">image story</string>
    <string name="photo">"foto "</string>
    <string name="gallery">galeri</string>
    <string name="camera">camera</string>
    <string name="upload">Post</string>
    <string name="empty_image_warning">Empty Image</string>
    <string name="empty_description_warning">deskripsi, dan gambar wajib diisi</string>
    <string name="empty_name_warning">Name cannot be empty</string>
    <string name="empty_email_warning">Email cannot be empty</string>
    <string name="empty_password_warning">Password cannot be empty</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="retry">Coba lagi</string>
    <string name="permission_denied">izin tidak diberikan</string>
    <string name="location_not_found">lokasi tidak ditemukan</string>
    <string name="create_story">Create Story</string>
    <string name="bagikan_lokasimu">Bagikan Lokasimu?</string>
    <string name="password_tidak_boleh_kurang_dari_8_karakter">Password tidak boleh kurang dari 8 karakter</string>
</resources>